--- a/03-ignews/src/styles/global.scss
+++ b/03-ignews/src/styles/global.scss
@@ -12,7 +12,7 @@
   --gray-850: #1f2729;
   --gray-900: #121214;
   --cyan-500: #61dafb;
-  --yellow: #eba417;
+  --yellow-500: #eba417;
 }
 
 @media (max-width: 1080px) {
@@ -37,7 +37,7 @@ input,
 textarea,
 select,
 button {
-  font: 400 1rem "Roboto, sans-serif";
+  font: 400 1rem "Roboto", sans-serif;
 }
 
 button {
